--- a/sass/_andre.scss
+++ b/sass/_andre.scss
@@ -1,3 +1,7 @@
+body {
+    background-color: #E5E5E5;
+}
+
 .container {
     max-width: 882px;
     padding: 0 15px;
@@ -24,6 +28,7 @@
     font-style: normal;
     font-weight: 500;
     color: #4F4F4F;
+    display: inline-block;
 }
 
 h1.title {
@@ -37,4 +42,182 @@ h1.title {
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
     border-radius: 20px;
     padding: 20px;
+}
+
+.video_wrapp {
+    position: relative;
+    padding-bottom: 50.12%;
+    padding-top: 25px;
+    height: 0;
+    background-color: #C4C4C4;
+}
+
+.video_wrapp iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+// header
+
+header {
+    background: #60C09E;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+    margin-bottom: 20px;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 19px;
+
+    .logo {
+        padding: 13px 18px;
+        background-color: #245868;
+    }
+
+    p {
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 22px;
+        text-align: right;
+        color: #FFFFFF;
+    }
+}
+// sec_mentor
+
+.mentor {
+    .title {
+        margin-top: 75px;
+        margin-bottom: 50px;
+    }
+
+    .btn {
+        display: block;
+        text-align: center;
+        margin-top: 18px;
+        font-family: Open Sans;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 13px;
+        line-height: 130%;
+        color: #FFFFFF;
+        background-color: #2F86D4;
+        border-radius: 3px;
+        padding: 9px;
+        text-decoration: none;
+
+        &:hover {
+            background-color: #19568C;
+            text-decoration: none;
+            cursor: pointer;
+        }
+    }
+
+    .video_with_btn {
+        max-width: 423px;
+        width: 100%;
+    }
+
+    .video_and_list {
+        display: -webkit-flex;
+        display: -ms-flex;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    // list
+    ul.list {
+        margin-left: 30px;
+        padding-left: 0;
+
+        li {
+            padding-left: 31px;
+            font-family: Montserrat;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 20px;
+            line-height: 33px;
+            color: #828282;
+            position: relative;
+            max-width: 342px;
+
+            &:not(:last-of-type) {
+                margin-bottom: 20px;
+            }
+
+            &:before {
+                content: '';
+                position: absolute;
+                left: 0;
+                top: 6px;
+                width: 18px;
+                height: 18px;
+                display: block;
+                background-image: url("../img/check.svg");
+            }
+        }
+    }
+}
+// section why_you_need_mentor
+
+.why_you_need_mentor {
+    .title {
+        margin-bottom: 70px;
+        margin-top: 138px;
+    }
+
+    .card_list {
+        max-width: 713px;
+        margin: 0 auto;
+
+        .card {
+            padding: 35px 30px;
+            display: -webkit-flex;
+            display: -ms-flex;
+            display: flex;
+            align-items: center;
+            min-height: 131px;
+            box-sizing: border-box;
+
+            &:not(:last-of-type) {
+                margin-bottom: 34px;
+            }
+
+            img {
+                display: inline-block;
+                margin-right: 27px;
+            }
+        }
+
+        p {
+            font-family: Montserrat;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 18px;
+            line-height: 22px;
+            color: #828282;
+        }
+    }
+}
+// section are_you_ready
+
+.are_you_ready {
+    .title {
+        margin-top: 144px;
+        margin-bottom: 31px;
+    }
+
+    p.under_title {
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 28px;
+        color: #828282;
+        display: inline-block;
+        margin-bottom: 62px;
+    }
 }
