--- a/sass/_andre.scss
+++ b/sass/_andre.scss
@@ -1,5 +1,22 @@
 body {
-    background-color: #E5E5E5;
+    background-color: #F4F4F4;
+}
+
+body,
+html {
+    font-size: 16px;
+}
+@media (max-width: 991.98px) {
+    body,
+    html {
+        font-size: 14px;
+    }
+}
+@media (max-width: 767.98px) {
+    body,
+    html {
+        font-size: 12px;
+    }
 }
 
 .container {
@@ -15,12 +32,13 @@ body {
 .with_before:before {
     content: "";
     position: absolute;
-    top: -12px;
+    top: -0.75rem;
     left: 0;
-    width: 85px;
-    height: 5px;
+    width: 5.3125rem;
+    height: 0.3125rem;
     background-image: url("../img/line_before_title.svg");
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .title {
@@ -32,22 +50,22 @@ body {
 }
 
 h1.title {
-    font-size: 33px;
+    font-size: 2.0625rem;
     line-height: 130%;
-    margin-top: 100px;
+    margin-top: 6.25rem;
 }
 
 .card {
     background: #FFFFFF;
-    box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
-    border-radius: 20px;
-    padding: 20px;
+    box-shadow: 0 0 1.5625rem rgba(0, 0, 0, 0.15);
+    border-radius: 1.25rem;
+    padding: 1.25rem;
 }
 
 .video_wrapp {
     position: relative;
     padding-bottom: 50.12%;
-    padding-top: 25px;
+    padding-top: 1.5625rem;
     height: 0;
     background-color: #C4C4C4;
 }
@@ -59,30 +77,55 @@ h1.title {
     width: 100%;
     height: 100%;
 }
+
+.slide_bg {
+    display: block;
+    width: 100%;
+    padding-top: 60.78%;
+    background-image: url("../img/slide_bg.png");
+    box-shadow: 0 0 1.5625rem rgba(0,0,0,0.15);
+    background-size: cover;
+    border-radius: 0.25rem;
+    overflow: hidden;
+    position: relative;
+
+    img {
+        display: inline-block;
+        position: absolute;
+        width: 100%;
+        height: auto;
+        top: 6.8%;
+        left: 0;
+    }
+}
 // header
 
 header {
     background: #60C09E;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
-    margin-bottom: 20px;
+    box-shadow: 0 0 0.625rem rgba(0, 0, 0, 0.15);
+    margin-bottom: 1.25rem;
     display: -webkit-flex;
     display: -ms-flex;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-right: 19px;
+    padding-right: 1.1875rem;
 
     .logo {
-        padding: 13px 18px;
+        padding: 0.8125rem 1.12500rem;
         background-color: #245868;
+
+        img {
+            width: 9.0625rem;
+        }
     }
 
     p {
         font-family: Montserrat;
         font-style: normal;
         font-weight: 500;
-        font-size: 18px;
-        line-height: 22px;
+        font-size: 1.12500rem;
+        line-height: 1.37500rem;
         text-align: right;
         color: #FFFFFF;
     }
@@ -91,23 +134,23 @@ header {
 
 .mentor {
     .title {
-        margin-top: 75px;
-        margin-bottom: 50px;
+        margin-top: 4.6875rem;
+        margin-bottom: 3.12500rem;
     }
 
     .btn {
         display: block;
         text-align: center;
-        margin-top: 18px;
-        font-family: Open Sans;
+        margin-top: 1.12500rem;
+        font-family: Montserrat;
         font-style: normal;
         font-weight: 600;
-        font-size: 13px;
+        font-size: 0.8125rem;
         line-height: 130%;
         color: #FFFFFF;
         background-color: #2F86D4;
-        border-radius: 3px;
-        padding: 9px;
+        border-radius: 0.1875rem;
+        padding: 0.5625rem;
         text-decoration: none;
 
         &:hover {
@@ -118,7 +161,7 @@ header {
     }
 
     .video_with_btn {
-        max-width: 423px;
+        max-width: 26.4375rem;
         width: 100%;
     }
 
@@ -130,33 +173,34 @@ header {
     }
     // list
     ul.list {
-        margin-left: 30px;
+        margin-left: 1.87500rem;
         padding-left: 0;
 
         li {
-            padding-left: 31px;
+            padding-left: 1.9375rem;
             font-family: Montserrat;
             font-style: normal;
             font-weight: 500;
-            font-size: 20px;
-            line-height: 33px;
+            font-size: 1.25rem;
+            line-height: 2.0625rem;
             color: #828282;
             position: relative;
-            max-width: 342px;
+            max-width: 21.37500rem;
 
             &:not(:last-of-type) {
-                margin-bottom: 20px;
+                margin-bottom: 1.25rem;
             }
 
             &:before {
                 content: '';
                 position: absolute;
                 left: 0;
-                top: 6px;
-                width: 18px;
-                height: 18px;
+                top: 0.375rem;
+                width: 1.12500rem;
+                height: 1.12500rem;
                 display: block;
                 background-image: url("../img/check.svg");
+                background-size: contain;
             }
         }
     }
@@ -165,30 +209,30 @@ header {
 
 .why_you_need_mentor {
     .title {
-        margin-bottom: 70px;
-        margin-top: 138px;
+        margin-bottom: 4.37500rem;
+        margin-top: 8.62500rem;
     }
 
     .card_list {
-        max-width: 713px;
-        margin: 0 auto;
+        max-width: 44.5625rem;
+        margin: 0 4.12500rem;
 
         .card {
-            padding: 35px 30px;
+            padding: 2.1875rem 1.87500rem;
             display: -webkit-flex;
             display: -ms-flex;
             display: flex;
             align-items: center;
-            min-height: 131px;
+            min-height: 8.1875rem;
             box-sizing: border-box;
 
             &:not(:last-of-type) {
-                margin-bottom: 34px;
+                margin-bottom: 2.12500rem;
             }
 
             img {
                 display: inline-block;
-                margin-right: 27px;
+                margin-right: 1.6875rem;
             }
         }
 
@@ -196,8 +240,8 @@ header {
             font-family: Montserrat;
             font-style: normal;
             font-weight: 500;
-            font-size: 18px;
-            line-height: 22px;
+            font-size: 1.12500rem;
+            line-height: 1.37500rem;
             color: #828282;
         }
     }
@@ -206,18 +250,216 @@ header {
 
 .are_you_ready {
     .title {
-        margin-top: 144px;
-        margin-bottom: 31px;
+        margin-top: 9rem;
+        margin-bottom: 1.9375rem;
     }
 
     p.under_title {
         font-family: Montserrat;
         font-style: normal;
         font-weight: 500;
-        font-size: 16px;
-        line-height: 28px;
+        font-size: 1rem;
+        line-height: 1.75rem;
         color: #828282;
         display: inline-block;
-        margin-bottom: 62px;
+        margin-bottom: 3.87500rem;
+    }
+
+    .row_list {
+        .row {
+            display: -webkit-flex;
+            display: -ms-flex;
+            display: flex;
+            margin-bottom: 7.5rem;
+
+            &:last-of-type {
+                margin-bottom: 9rem;
+            }
+
+            &.row_reverse {
+                flex-direction: row-reverse;
+                text-align: right;
+
+                .col_txt {
+                    padding-left: 0;
+                    padding-right: 2.5rem;
+                }
+            }
+        }
+
+        .col {
+            width: 100%;
+            max-width: 50%;
+        }
+
+        .col_txt {
+            display: -webkit-flex;
+            display: -ms-flex;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            width: 100%;
+            padding-left: 2.5rem;
+
+            h2 {
+                font-family: Montserrat;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 1.12500rem;
+                line-height: 1.37500rem;
+                color: #4F4F4F;
+                margin-bottom: 1.5625rem;
+            }
+
+            p {
+                font-family: Montserrat;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 0.8125rem;
+                line-height: 153.59%;
+                color: #828282;
+            }
+        }
+    }
+}
+// section connect_mentor
+
+.connect_mentor {
+    background-color: rgba(88, 181, 139, .1);
+    text-align: center;
+    padding: 3.75rem 0 4rem;
+
+    .title {
+        margin-top: 0;
+    }
+
+    p.under_title {
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 1.12500rem;
+        line-height: 1.37500rem;
+        text-align: center;
+        color: #828282;
+        margin: 1.5625rem 0 2.75rem;
+    }
+
+    .with_before:before {
+        left: 50%;
+        transform: translateX(-50%);
+        width: 4.12500rem;
+        background-image: url("../img/line_before_title_2.svg");
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+
+    .btn {
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 0.75rem;
+        line-height: 0.9375rem;
+        text-align: center;
+        color: #FFFFFF;
+        padding: 0.5rem 1.87500rem;
+        height: auto;
+        width: auto;
+    }
+}
+@media (max-width: 575.98px) {
+    header {
+        padding-right: 0;
+
+        p {
+            text-align: left;
+            padding-left: 10px;
+            font-size: 1rem;
+        }
+    }
+
+    h1.title {
+        font-size: 1.5rem;
+    }
+
+    .mentor {
+        .title {
+            margin-top: 3rem;
+            margin-bottom: 2rem;
+        }
+
+        .video_with_btn {
+            max-width: 100%;
+        }
+
+        ul.list {
+            margin-left: 0;
+            margin-top: 2rem;
+        }
+
+        .btn {
+            font-size: 1.2rem;
+            padding: 0.9rem;
+        }
+    }
+
+    .why_you_need_mentor {
+        .title {
+            margin-bottom: 3rem;
+            margin-top: 4rem;
+        }
+
+        .card_list {
+            margin: 0;
+
+            p {
+                font-size: 1.1rem;
+            }
+        }
+    }
+
+    .are_you_ready {
+        .title {
+            margin-top: 5rem;
+        }
+
+        .row_list {
+            .row {
+                flex-direction: column;
+                max-width: 400px;
+                margin-left: auto;
+                margin-right: auto;
+                margin-bottom: 4rem;
+
+                &.row_reverse {
+                    flex-direction: column;
+                    text-align: left;
+
+                    .col_txt {
+                        padding-left: 0;
+                        padding-right: 0;
+                    }
+                }
+
+                &:last-of-type {
+                    margin-bottom: 4rem;
+                }
+            }
+
+            .col {
+                max-width: 100%;
+            }
+
+            .col_txt {
+                padding: 0;
+                margin-top: 2rem;
+                text-align: left;
+            }
+        }
+    }
+
+    .connect_mentor .btn {
+        font-size: 1.2rem;
+        padding: 0.9rem 1.87500rem;
     }
 }
