ready PC second page

--- a/sass/_andre.scss
+++ b/sass/_andre.scss
@@ -89,7 +89,8 @@ h1.title {
     overflow: hidden;
     position: relative;
 
-    img {
+    .lSSlideOuter,
+    & > img {
         display: inline-block;
         position: absolute;
         width: 100%;
