--- a/sass/_toha.scss
+++ b/sass/_toha.scss
@@ -1,42 +1,49 @@
 /* Welcome to Compass. Use this file to define print styles.
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" /> */
+
 body.profile-settings5 {
 	background-color: #f4f4f4;
 }
+
 .profile-settings5 .container {
-	width: 895px;
+	max-width: 895px;
 	padding: 0 15px;
 	margin: 0 auto;
 	font-family: 'Montserrat';
 }
 
 .success-block {
-	width: 500px;
-	margin: 60px auto 25px auto;
+	width: 31.25rem;
+	margin: 3.75rem auto 1.5625rem;
 	display: flex;
 	align-items: center;
 	font-weight: 600;
-	font-size: 28px;
+	font-size: 1.75rem;
 	line-height: 130%;
 	color: #58B58B;
 
 	img {
-		margin-right: 30px;
+		margin-right: 1.87500rem;
+		width: 6.25rem;
+		height: 6.25rem;
 	}
 }
+
 .about-person {
 	display: flex;
 	align-items: center;
+
 	.image {
-		min-width: 250px;
-		height: 250px;
-		border: 3px solid #58B58B;
+		min-width: 15.62500rem;
+		height: 15.62500rem;
+		border: 0.1875rem solid #58B58B;
 		border-radius: 50%;
 		overflow: hidden;
 		position: relative;
 		background-color: #E5DADA;
-		margin-right: 35px;
+		margin-right: 2.1875rem;
+
 		img {
 			position: absolute;
 			bottom: 0;
@@ -45,37 +52,39 @@ body.profile-settings5 {
 
 	.text {
 		font-weight: 500;
-		font-size: 20px;
-		line-height: 33px;
+		font-size: 1.25rem;
+		line-height: 2.0625rem;
 		color: #828282;
+
 		.bigger {
-			font-size: 24px;
-			line-height: 29px;
-			margin-bottom: 25px;
+			font-size: 1.5rem;
+			line-height: 1.8125rem;
+			margin-bottom: 1.5625rem;
 		}
 	}
 }
+
 .two-blocks_title {
-	margin-bottom: 100px;
+	margin-bottom: 6.25rem;
 }
 
 .title.margin-big {
-	margin: 100px 0;
+	margin: 6.25rem 0;
 }
 
 .title.margin-sm {
-	margin-bottom: 35px;
+	margin-bottom: 2.1875rem;
 }
 
 .profile-settings5 .two-blocks_wrapp {
 	& > .two-blocks:first-of-type {
-		margin-bottom: 125px;
+		margin-bottom: 7.8125rem;
 	}
 
 	& > .two-blocks {
-		margin-bottom: 185px;
+		margin-bottom: 11.5625rem;
 	}
-} 
+}
 
 .two-blocks {
 	display: flex;
@@ -84,64 +93,142 @@ body.profile-settings5 {
 		align-items: center;
 	}
 
-	&:not(.reverse)>div:first-of-type {
-		margin-right: 50px;
+	&:not(.reverse) > div:first-of-type {
+		margin-right: 3.12500rem;
 	}
 
 	&.reverse {
 		flex-direction: row-reverse;
 
-		>div:first-of-type {
-			margin-left: 50px;
+		> div:first-of-type {
+			margin-left: 3.12500rem;
 		}
 	}
 
 	.text {
-		font-size: 16px;
+		font-size: 1rem;
 		line-height: 1.75;
 		color: #828282;
 		font-weight: 500;
 
 		.btn {
-			margin-top: 25px;
+			margin-top: 1.5625rem;
+			width: 318px;
 		}
 
 		.text-title {
-			font-size: 24px;
+			font-size: 1.5rem;
 			color: #4F4F4F;
 			line-height: 130%;
-			margin-bottom: 20px;
+			margin-bottom: 1.25rem;
 		}
 	}
 
 	.image {
-		min-width: 485px;
-		flex-basis: 485px;
-		box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+		min-width: 30.3125rem;
+		flex-basis: 30.3125rem;
+		box-shadow: 0 0 1.5625rem rgba(0, 0, 0, 0.15);
 
 		img {
 			width: 100%;
 		}
 	}
 }
-
 //slider styles
-.lSAction>a {
-	width: 28px;
-	height: 28px;
+
+.lSAction > a {
+	width: 1.75rem;
+	height: 1.75rem;
 	background-size: cover;
 	background-position: center!important;
 
 	&:hover svg path {
-		fill:#dbdbdb;
+		fill: #dbdbdb;
 	}
 }
 
-.lSAction>a.lSNext {
+.lSAction > a.lSNext {
 	transform: rotate(180deg);
-	right: 10px;
+	right: 0.625rem;
 }
 
-.lSAction>a.lSPrev {
-	left: 10px;
+.lSAction > a.lSPrev {
+	left: 0.625rem;
+}
+@media (max-width: 991.98px) {
+	.two-blocks .text .btn {
+		width: auto;
+	}
+
+	.success-block {
+		width: 35rem;
+	}
+}
+@media (max-width: 700px) {
+	.two-blocks.align-items-center {
+		flex-direction: column-reverse;
+	}
+
+	.two-blocks .image {
+		min-width: 0;
+		max-width: 30.3125rem;
+		width: 100%;
+		flex-basis: initial;
+	}
+
+	.two-blocks .text {
+		max-width: 30.3125rem;
+		width: 100%;
+		margin-right: 0 !important;
+		margin-top: 2rem;
+	}
+
+	.profile-settings5 .two-blocks_wrapp > .two-blocks {
+		margin-bottom: 5REM;
+	}
+
+	.profile-settings5 .two-blocks_wrapp > .two-blocks:first-of-type {
+		margin-bottom: 5rem;
+	}
+
+	.two-blocks.reverse > div:first-of-type {
+		margin-left: 0;
+	}
+}
+@media (max-width: 575.98px) {
+	.about-person {
+		flex-direction: column;
+		align-items: flex-start;
+
+		.image {
+			margin-right: 0;
+			margin-bottom: 2.1875rem;
+		}
+	}
+
+	.success-block {
+		width: auto;
+		font-size: 1.5rem;
+		margin: 3rem auto 1.5625rem;
+
+		img {
+			margin-right: 1.8rem;
+			width: 6rem;
+			height: 6rem;
+		}
+	}
+
+	.profile-settings5 {
+		.title_1 {
+			margin-top: 3rem;
+		}
+
+		.btn-blue {
+			font-size: 1.2rem;
+		}
+
+		.title.margin-big {
+			margin: 6.25rem 0 3rem;
+		}
+	}
 }
