--- a/sass/jquery.steps.scss
+++ b/sass/jquery.steps.scss
@@ -1,6 +1,7 @@
 /* ==========================================================================
    Chrome Frame prompt
    ========================================================================== */
+
 .chromeframe {
     margin: 0.2em 0;
     background: #ccc;
@@ -16,6 +17,7 @@
 /*
  * Image replacement
  */
+
 .ir {
     background-color: transparent;
     border: 0;
@@ -33,6 +35,7 @@
 /*
  * Hide from both screenreaders and browsers: h5bp.com/u
  */
+
 .hidden {
     display: none !important;
     visibility: hidden;
@@ -40,6 +43,7 @@
 /*
  * Hide only visually, but have it available for screenreaders: h5bp.com/v
  */
+
 .visuallyhidden {
     border: 0;
     clip: rect(0 0 0 0);
@@ -54,6 +58,7 @@
  * Extends the .visuallyhidden class to allow the element to be focusable
  * when navigated to via the keyboard: h5bp.com/p
  */
+
 .visuallyhidden.focusable:active,
 .visuallyhidden.focusable:focus {
     clip: auto;
@@ -66,6 +71,7 @@
 /*
  * Hide visually and from screenreaders, but maintain layout
  */
+
 .invisible {
     visibility: hidden;
 }
@@ -80,6 +86,7 @@
  * 2. The use of `table` rather than `block` is only necessary if using
  *    `:before` to contain the top-margins of child elements.
  */
+
 .clearfix:after,
 .clearfix:before {
     content: " ";
@@ -95,6 +102,7 @@
  * For IE 6/7 only
  * Include this rule to trigger hasLayout and contain floats.
  */
+
 .clearfix {
     *zoom: 1;
 }
@@ -181,6 +189,7 @@
 /**
  * Correct `inline-block` display not defined in IE 6/7/8/9 and Firefox 3.
  */
+
 audio,
 canvas,
 video {
@@ -192,6 +201,7 @@ video {
  * Prevent modern browsers from displaying `audio` without controls.
  * Remove excess height in iOS 5 devices.
  */
+
 audio:not([controls]) {
     display: none;
     height: 0;
@@ -200,6 +210,7 @@ audio:not([controls]) {
  * Address styling not present in IE 7/8/9, Firefox 3, and Safari 4.
  * Known issue: no IE 6 support.
  */
+
 [hidden] {
     display: none;
 }
@@ -210,6 +221,7 @@ audio:not([controls]) {
  * 1. Remove border when inside `a` element in IE 6/7/8/9 and Firefox 3.
  * 2. Improve image quality when scaled in IE 7.
  */
+
 img {
     border: 0;
     /* 1 */
@@ -219,6 +231,7 @@ img {
 /**
  * Correct overflow displayed oddly in IE 9.
  */
+
 svg:not(:root) {
     overflow: hidden;
 }
@@ -228,6 +241,7 @@ svg:not(:root) {
 /**
  * Address margin not present in IE 6/7/8/9, Safari 5, and Opera 11.
  */
+
 figure {
     margin: 0;
 }
@@ -237,12 +251,14 @@ figure {
 /**
  * Correct margin displayed oddly in IE 6/7.
  */
+
 form {
     margin: 0;
 }
 /**
  * Define consistent border, margin, and padding.
  */
+
 fieldset {
     border: 1px solid #c0c0c0;
     margin: 0 2px;
@@ -253,6 +269,7 @@ fieldset {
  * 2. Correct text not wrapping in Firefox 3.
  * 3. Correct alignment displayed oddly in IE 6/7.
  */
+
 legend {
     border: 0;
     /* 1 */
@@ -268,6 +285,7 @@ legend {
  *    and Chrome.
  * 3. Improve appearance and consistency in all browsers.
  */
+
 button,
 input,
 select,
@@ -285,6 +303,7 @@ textarea {
  * Address Firefox 3+ setting `line-height` on `input` using `!important` in
  * the UA stylesheet.
  */
+
 button,
 input {
     line-height: normal;
@@ -295,6 +314,7 @@ input {
  * Correct `button` style inheritance in Chrome, Safari 5+, and IE 6+.
  * Correct `select` style inheritance in Firefox 4+ and Opera.
  */
+
 button,
 select {
     text-transform: none;
@@ -308,8 +328,8 @@ select {
  * 4. Remove inner spacing in IE 7 without affecting normal text inputs.
  *    Known issue: inner spacing remains in IE 6.
  */
-button, html input[type="button"],/* 1 */
-
+button, html input[type="button"],
+/* 1 */
 input[type="reset"],
 input[type="submit"] {
     -webkit-appearance: button;
@@ -322,6 +342,7 @@ input[type="submit"] {
 /**
  * Re-set default cursor for disabled elements.
  */
+
 button[disabled],
 html input[disabled] {
     cursor: default;
@@ -332,6 +353,7 @@ html input[disabled] {
  * 3. Remove excess padding in IE 7.
  *    Known issue: excess padding remains in IE 6.
  */
+
 input[type="checkbox"],
 input[type="radio"] {
     box-sizing: border-box;
@@ -348,6 +370,7 @@ input[type="radio"] {
  * 2. Address `box-sizing` set to `border-box` in Safari 5 and Chrome
  *    (include `-moz` to future-proof).
  */
+
 input[type="search"] {
     -webkit-appearance: textfield;
     /* 1 */
@@ -360,6 +383,7 @@ input[type="search"] {
  * Remove inner padding and search cancel button in Safari 5 and Chrome
  * on OS X.
  */
+
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
     -webkit-appearance: none;
@@ -367,6 +391,7 @@ input[type="search"]::-webkit-search-decoration {
 /**
  * Remove inner padding and border in Firefox 3+.
  */
+
 button::-moz-focus-inner,
 input::-moz-focus-inner {
     border: 0;
@@ -376,6 +401,7 @@ input::-moz-focus-inner {
  * 1. Remove default vertical scrollbar in IE 6/7/8/9.
  * 2. Improve readability and alignment in all browsers.
  */
+
 textarea {
     overflow: auto;
     /* 1 */
@@ -388,6 +414,7 @@ textarea {
 /**
  * Remove most spacing between table cells.
  */
+
 table {
     border-collapse: collapse;
     border-spacing: 0;
@@ -395,6 +422,7 @@ table {
 /*
     Common
 */
+
 .tabcontrol,
 .wizard {
     display: block;
@@ -420,7 +448,6 @@ table {
     padding: 0;
 }
 /* Accessibility */
-
 .tabcontrol > .steps .current-info,
 .wizard > .steps .current-info {
     position: absolute;
@@ -435,6 +462,7 @@ table {
 /*
     Wizard
 */
+
 .wizard > .steps {
     position: relative;
     display: block;
@@ -608,6 +636,7 @@ table {
 /*
     Tabcontrol
 */
+
 .tabcontrol > .steps {
     position: relative;
     display: block;
@@ -799,10 +828,6 @@ fieldset {
 }
 //  custom
 
-body {
-    background-color: #fff;
-}
-
 .steps_wrapp {
     margin-top: 3.12500rem;
 
@@ -946,6 +971,43 @@ body {
             margin-right: 1rem;
             box-sizing: border-box;
             min-width: 2.87500rem;
+        }
+    }
+}
+// .card.about-person
+
+.card.about-person {
+    padding: 3.62500rem 2.87500rem;
+    margin: 3.12500rem 0;
+
+    .text {
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 0.875rem;
+        line-height: 1.5625rem;
+        color: #828282;
+    }
+
+    .bigger {
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 1.12500rem;
+        line-height: 1.37500rem;
+        color: #4F4F4F;
+        margin-bottom: 1.3125rem;
+    }
+
+    .image {
+        width: 12.5rem;
+        min-width: 12.5rem;
+        height: 12.5rem;
+        background-color: #E5DADA;
+
+        img {
+            width: 95%;
+            height: auto;
         }
     }
 }
