--- a/sass/jquery.steps.scss
+++ b/sass/jquery.steps.scss
@@ -1,7 +1,6 @@
 /* ==========================================================================
    Chrome Frame prompt
    ========================================================================== */
-
 .chromeframe {
     margin: 0.2em 0;
     background: #ccc;
@@ -17,7 +16,6 @@
 /*
  * Image replacement
  */
-
 .ir {
     background-color: transparent;
     border: 0;
@@ -35,7 +33,6 @@
 /*
  * Hide from both screenreaders and browsers: h5bp.com/u
  */
-
 .hidden {
     display: none !important;
     visibility: hidden;
@@ -43,7 +40,6 @@
 /*
  * Hide only visually, but have it available for screenreaders: h5bp.com/v
  */
-
 .visuallyhidden {
     border: 0;
     clip: rect(0 0 0 0);
@@ -58,7 +54,6 @@
  * Extends the .visuallyhidden class to allow the element to be focusable
  * when navigated to via the keyboard: h5bp.com/p
  */
-
 .visuallyhidden.focusable:active,
 .visuallyhidden.focusable:focus {
     clip: auto;
@@ -71,7 +66,6 @@
 /*
  * Hide visually and from screenreaders, but maintain layout
  */
-
 .invisible {
     visibility: hidden;
 }
@@ -86,7 +80,6 @@
  * 2. The use of `table` rather than `block` is only necessary if using
  *    `:before` to contain the top-margins of child elements.
  */
-
 .clearfix:after,
 .clearfix:before {
     content: " ";
@@ -102,7 +95,6 @@
  * For IE 6/7 only
  * Include this rule to trigger hasLayout and contain floats.
  */
-
 .clearfix {
     *zoom: 1;
 }
@@ -189,7 +181,6 @@
 /**
  * Correct `inline-block` display not defined in IE 6/7/8/9 and Firefox 3.
  */
-
 audio,
 canvas,
 video {
@@ -201,7 +192,6 @@ video {
  * Prevent modern browsers from displaying `audio` without controls.
  * Remove excess height in iOS 5 devices.
  */
-
 audio:not([controls]) {
     display: none;
     height: 0;
@@ -210,7 +200,6 @@ audio:not([controls]) {
  * Address styling not present in IE 7/8/9, Firefox 3, and Safari 4.
  * Known issue: no IE 6 support.
  */
-
 [hidden] {
     display: none;
 }
@@ -221,7 +210,6 @@ audio:not([controls]) {
  * 1. Remove border when inside `a` element in IE 6/7/8/9 and Firefox 3.
  * 2. Improve image quality when scaled in IE 7.
  */
-
 img {
     border: 0;
     /* 1 */
@@ -231,7 +219,6 @@ img {
 /**
  * Correct overflow displayed oddly in IE 9.
  */
-
 svg:not(:root) {
     overflow: hidden;
 }
@@ -241,7 +228,6 @@ svg:not(:root) {
 /**
  * Address margin not present in IE 6/7/8/9, Safari 5, and Opera 11.
  */
-
 figure {
     margin: 0;
 }
@@ -251,14 +237,12 @@ figure {
 /**
  * Correct margin displayed oddly in IE 6/7.
  */
-
 form {
     margin: 0;
 }
 /**
  * Define consistent border, margin, and padding.
  */
-
 fieldset {
     border: 1px solid #c0c0c0;
     margin: 0 2px;
@@ -269,7 +253,6 @@ fieldset {
  * 2. Correct text not wrapping in Firefox 3.
  * 3. Correct alignment displayed oddly in IE 6/7.
  */
-
 legend {
     border: 0;
     /* 1 */
@@ -285,7 +268,6 @@ legend {
  *    and Chrome.
  * 3. Improve appearance and consistency in all browsers.
  */
-
 button,
 input,
 select,
@@ -303,7 +285,6 @@ textarea {
  * Address Firefox 3+ setting `line-height` on `input` using `!important` in
  * the UA stylesheet.
  */
-
 button,
 input {
     line-height: normal;
@@ -314,7 +295,6 @@ input {
  * Correct `button` style inheritance in Chrome, Safari 5+, and IE 6+.
  * Correct `select` style inheritance in Firefox 4+ and Opera.
  */
-
 button,
 select {
     text-transform: none;
@@ -328,8 +308,8 @@ select {
  * 4. Remove inner spacing in IE 7 without affecting normal text inputs.
  *    Known issue: inner spacing remains in IE 6.
  */
-button, html input[type="button"],
-/* 1 */
+button, html input[type="button"],/* 1 */
+
 input[type="reset"],
 input[type="submit"] {
     -webkit-appearance: button;
@@ -342,7 +322,6 @@ input[type="submit"] {
 /**
  * Re-set default cursor for disabled elements.
  */
-
 button[disabled],
 html input[disabled] {
     cursor: default;
@@ -353,7 +332,6 @@ html input[disabled] {
  * 3. Remove excess padding in IE 7.
  *    Known issue: excess padding remains in IE 6.
  */
-
 input[type="checkbox"],
 input[type="radio"] {
     box-sizing: border-box;
@@ -370,7 +348,6 @@ input[type="radio"] {
  * 2. Address `box-sizing` set to `border-box` in Safari 5 and Chrome
  *    (include `-moz` to future-proof).
  */
-
 input[type="search"] {
     -webkit-appearance: textfield;
     /* 1 */
@@ -383,7 +360,6 @@ input[type="search"] {
  * Remove inner padding and search cancel button in Safari 5 and Chrome
  * on OS X.
  */
-
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
     -webkit-appearance: none;
@@ -391,7 +367,6 @@ input[type="search"]::-webkit-search-decoration {
 /**
  * Remove inner padding and border in Firefox 3+.
  */
-
 button::-moz-focus-inner,
 input::-moz-focus-inner {
     border: 0;
@@ -401,7 +376,6 @@ input::-moz-focus-inner {
  * 1. Remove default vertical scrollbar in IE 6/7/8/9.
  * 2. Improve readability and alignment in all browsers.
  */
-
 textarea {
     overflow: auto;
     /* 1 */
@@ -414,7 +388,6 @@ textarea {
 /**
  * Remove most spacing between table cells.
  */
-
 table {
     border-collapse: collapse;
     border-spacing: 0;
@@ -422,7 +395,6 @@ table {
 /*
     Common
 */
-
 .tabcontrol,
 .wizard {
     display: block;
@@ -448,6 +420,7 @@ table {
     padding: 0;
 }
 /* Accessibility */
+
 .tabcontrol > .steps .current-info,
 .wizard > .steps .current-info {
     position: absolute;
@@ -462,7 +435,6 @@ table {
 /*
     Wizard
 */
-
 .wizard > .steps {
     position: relative;
     display: block;
@@ -636,7 +608,6 @@ table {
 /*
     Tabcontrol
 */
-
 .tabcontrol > .steps {
     position: relative;
     display: block;
@@ -1008,6 +979,113 @@ fieldset {
         img {
             width: 95%;
             height: auto;
+        }
+    }
+}
+// .connect_bot.card
+
+.card.connect_bot {
+    padding: 2.0625rem 2.5625rem;
+    margin-bottom: 40px;
+
+    .title {
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 0.9375rem;
+        line-height: 1.5625rem;
+        color: #4F4F4F;
+        margin-bottom: 0.1875rem;
+    }
+
+    .subtitle {
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 0.875rem;
+        line-height: 1.5625rem;
+        color: #828282;
+        margin-bottom: 2.4375rem;
+    }
+
+    .bot_block {
+        display: -webkit-flex;
+        display: -ms-flex;
+        display: flex;
+        align-items: center;
+        background: #FFFFFF;
+        border: 1px solid #D6D6D6;
+        box-sizing: border-box;
+        border-radius: 5px;
+        padding: 21px 20px;
+
+        &:not(:last-of-type) {
+            margin-bottom: 31px;
+        }
+
+        .img {
+            display: block;
+            width: 75px;
+            height: 75px;
+            border-radius: 50%;
+            background-image: url("../img/tg_bot.svg");
+            background-size: contain;
+            background-color: #fff;
+            margin-right: 22px;
+            background-repeat: no-repeat;
+            background-position: center;
+        }
+
+        &.vb .img {
+            background-image: url("../img/vb_bot.svg");
+        }
+
+        &.fb .img {
+            background-image: url("../img/fb_bot.svg");
+        }
+
+        p {
+            font-family: Montserrat;
+            font-style: normal;
+            font-weight: 600;
+            font-size: 15px;
+            line-height: 150%;
+            color: #000000;
+            max-width: 13.75rem;
+            margin-right: auto;
+        }
+
+        .btn {
+            font-family: Montserrat;
+            font-style: normal;
+            font-weight: 600;
+            font-size: 0.75rem;
+            line-height: 0.9375rem;
+            text-align: center;
+            color: #828282;
+            padding: 0.4375rem 1.37500rem;
+            background: #FFFFFF;
+            border: 0.0625rem solid #E0E0E0;
+            box-sizing: border-box;
+            border-radius: 0.1875rem;
+            min-width: 11.37500rem;
+            text-align: center;
+
+            &.btn-blue {
+                margin-left: 1.87500rem;
+                margin-right: 1.3125rem;
+                background: #557FAF;
+                box-shadow: 0.0625rem 0.0625rem 0.125rem rgba(0, 0, 0, 0.07);
+                border-radius: 0.1875rem;
+                color: #fff;
+                border-color: #557FAF;
+                min-width: 7.75rem;
+
+                &:hover {
+                    background-color: #3f5c7d;
+                    border-color: #3f5c7d;
+                }
+            }
         }
     }
 }
