steps mobile finish

--- a/sass/jquery.steps.scss
+++ b/sass/jquery.steps.scss
@@ -1053,6 +1053,37 @@ fieldset {
             margin-right: auto;
         }
 
+        .next-step-btn {
+            font-family: Montserrat;
+            font-style: normal;
+            font-weight: 600;
+            font-size: 0.75rem;
+            line-height: 0.9375rem;
+            text-align: center;
+            color: #828282;
+            padding: 0.4375rem 1.37500rem;
+            background: #FFFFFF;
+            border: 0.0625rem solid #E0E0E0;
+            box-sizing: border-box;
+            border-radius: 0.1875rem;
+            min-width: 11.37500rem;
+            text-align: center;
+            margin-left: 1.87500rem;
+            margin-right: 1.3125rem;
+            background: #557FAF;
+            box-shadow: 0.0625rem 0.0625rem 0.125rem rgba(0, 0, 0, 0.07);
+            border-radius: 0.1875rem;
+            color: #fff;
+            border-color: #557FAF;
+            min-width: 7.75rem;
+            text-decoration: none;
+
+            &:hover {
+                background-color: #3f5c7d;
+                border-color: #3f5c7d;
+            }
+        }
+
         .btn {
             font-family: Montserrat;
             font-style: normal;
@@ -1648,12 +1679,14 @@ fieldset {
         font-size: 1rem;
     }
     // step 3
+    .card.connect_bot .bot_block .next-step-btn,
     .card.connect_bot .bot_block .btn {
         margin-top: 1rem;
         height: auto;
         font-size: 0.9rem;
     }
 
+    .card.connect_bot .bot_block .next-step-btn,
     .card.connect_bot .bot_block .btn.btn-blue {
         margin-right: 0;
     }
