--- a/sass/style.scss
+++ b/sass/style.scss
@@ -42,6 +42,14 @@
 .btn-blue:hover {
     background: #224a7c;
 }
+.btn.disable {
+    cursor: not-allowed;
+    pointer-events: none;
+    background: #E0E0E0;
+    box-shadow: 0.0625rem 0.0625rem 0.125rem rgba(0,0,0,0.07);
+    border-radius: 0.1875rem;
+    color: #fff;
+}
 // .tab-nav
 
 .tab-nav ul {
