--- a/sass/_modals.scss
+++ b/sass/_modals.scss
@@ -4,6 +4,23 @@
 }
 // modals style
 
+.modal {
+    display: none;
+}
+
+.modal.show {
+    position: fixed;
+    overflow-x: hidden;
+    overflow-y: auto;
+    top: 0;
+    left: 0;
+    z-index: 1050;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .4);
+    display: block;
+}
+
 .modal-dialog {
     max-width: 1054px;
     margin: 1.75rem auto;
@@ -39,6 +56,14 @@
     font-size: 24px;
     line-height: 130%;
     color: #4F4F4F;
+}
+
+.tab-pane {
+    display: none;
+
+    &.active {
+        display: block;
+    }
 }
 
 button.close {
@@ -385,7 +410,7 @@ button.close {
     .tab-pane {
         min-height: 507px;
 
-        &.second {
+        &.active.second {
             display: -webkit-flex;
             display: -ms-flex;
             display: flex;
