--- a/sass/newland.scss
+++ b/sass/newland.scss
@@ -3,3 +3,8 @@
 @import "newland/common";
 @import "newland/header";
 @import "newland/sec_1";
+@import "newland/sec_2";
+@import "newland/sec_3";
+@import "newland/sec_4";
+@import "newland/sec_5";
+@import "newland/sec_6";
