--- a/sass/newland/_common.scss
+++ b/sass/newland/_common.scss
@@ -12,6 +12,10 @@ body {
 
 .sec {
     position: relative;
+
+    .container {
+        position: relative;
+    }
 }
 
 .btn {
@@ -106,4 +110,8 @@ h2 {
         color: #828282;
         margin: 0;
     }
+}
+
+.embed-responsive {
+    background-color: rgba(229, 229, 229, .5);
 }
