--- a/sass/newland/_sec_4.scss
+++ b/sass/newland/_sec_4.scss
@@ -1,4 +1,71 @@
 .sec_4 {
     background: rgba(88, 181, 139, .1);
-    padding: 78px 0 87px;
+    padding: 78px 0 67px;
+
+    .sec_title {
+        margin-bottom: 40px;
+    }
+
+    .col-4 {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .media {
+        background: #FFFFFF;
+        box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+        border-radius: 8px;
+        padding: 16px 28px;
+        min-height: 96px;
+        display: -webkit-flex;
+        display: -ms-flex;
+        display: flex;
+        align-items: center;
+        margin-bottom: 20px;
+
+        .icon {
+            display: block;
+            background-image: url("../img/sec_4/ok.svg");
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            width: 50px;
+            min-width: 50px;
+            height: 50px;
+            margin-right: 23px;
+        }
+
+        p {
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 130%;
+            color: #4F4F4F;
+            margin: 0;
+        }
+    }
+
+    .stone_orange {
+        top: 20%;
+        left: -3%;
+    }
+
+    .circle {
+        top: 2%;
+        left: 12%;
+    }
+
+    .dubl_line {
+        top: 92%;
+        right: 80%;
+    }
+
+    .dubl_line.vertical {
+        right: 10%;
+        top: 3%;
+    }
+
+    .circle_orange {
+        bottom: 4%;
+        right: 13%;
+    }
 }
