--- a/sass/newland.scss
+++ b/sass/newland.scss
@@ -8,3 +8,7 @@
 @import "newland/sec_4";
 @import "newland/sec_5";
 @import "newland/sec_6";
+@import "newland/sec_7";
+@import "newland/sec_8";
+@import "newland/sec_9";
+@import "newland/sec_10";
