--- a/sass/newland/_common.scss
+++ b/sass/newland/_common.scss
@@ -37,6 +37,13 @@ body {
     transform: rotate(90deg);
 }
 
+.dubl_stone_2 {
+    transform: rotateX(-180deg) rotateY(-180deg);
+}
+.dubl_stone_3 {
+    transform: rotateX(-180deg);
+}
+
 .btn-primary {
     color: #FCFCFC;
     background-color: #557FAF;
@@ -45,6 +52,17 @@ body {
     &:hover {
         background-color: #45658a;
         border-color: #45658a;
+    }
+}
+
+.btn-success {
+    color: #FCFCFC;
+    background: #58B58B;
+    border-color: #58B58B;
+
+    &:hover {
+        background: #428c6b;
+        border-color: #428c6b;
     }
 }
 
