--- a/sass/newland/_sec_5.scss
+++ b/sass/newland/_sec_5.scss
@@ -2,7 +2,7 @@
     padding: 69px 0 36px;
 
     .sec_title {
-        margin-bottom: 55px;
+        margin-bottom: 60px;
     }
 
     .media {
@@ -59,5 +59,35 @@
         font-size: 16px;
         line-height: 150%;
         color: #828282;
+    }
+
+    .stone_red {
+        top: 27%;
+        left: 37%;
+    }
+
+    .star_orange {
+        top: 20%;
+        left: 75%;
+    }
+
+    .circle_orange {
+        left: -10%;
+        top: 68%;
+    }
+
+    .star_green {
+        left: -5%;
+        top: -2%;
+    }
+
+    .dubl_line {
+        left: 91%;
+        top: 105%;
+    }
+
+    .star_blue {
+        left: 56%;
+        top: 101%;
     }
 }
