--- a/sass/newland/_sec_6.scss
+++ b/sass/newland/_sec_6.scss
@@ -1,4 +1,6 @@
 .sec_6 {
+    padding: 45px 0 36px;
+
     .second_title {}
 
     .media {
@@ -6,9 +8,72 @@
         background: #FFFFFF;
         box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
         border-radius: 20px;
+        text-align: center;
+        padding: 51px 0 55px;
+        display: -webkit-flex;
+        display: -ms-flex;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     p {
         max-width: 214px;
+    }
+
+    .icon {
+        display: block;
+        background-color: rgba(229, 229, 229, .5);
+        background-position: 0 0;
+        background-repeat: no-repeat;
+        background-size: cover;
+        border: 4px solid #58B58B;
+        border-radius: 50%;
+        box-sizing: border-box;
+        width: 150px;
+        min-width: 150px;
+        height: 150px;
+        margin-bottom: 28px;
+    }
+
+    h3 {
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 130%;
+        color: #4F4F4F;
+        margin-bottom: 15px;
+    }
+
+    p {
+        min-height: 80px;
+        color: #828282;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 150%;
+        margin: 0;
+    }
+
+    .btn {
+        width: 377px;
+        margin-top: 55px;
+        font-weight: 600;
+        font-size: 17px;
+        line-height: 130%;
+        padding: 16px;
+    }
+
+    .circle {
+        left: 10%;
+        top: 87%;
+    }
+
+    .dubl_stone {
+        left: -6%;
+        top: 2%;
+    }
+
+    .dubl_stone_2 {
+        left: 90%;
+        top: 63%;
     }
 }
