--- a/sass/newland.scss
+++ b/sass/newland.scss
@@ -1,5 +1,6 @@
 @import "fonts";
 @import "icons";
+@import "newland/lightslider";
 @import "newland/common";
 @import "newland/header";
 @import "newland/sec_1";
