--- a/sass/newland.scss
+++ b/sass/newland.scss
@@ -13,3 +13,6 @@
 @import "newland/sec_8";
 @import "newland/sec_9";
 @import "newland/sec_10";
+@import "newland/sec_11";
+@import "newland/sec_12";
+@import "newland/footer";
