--- a/sass/newland/_sec_4.scss
+++ b/sass/newland/_sec_4.scss
@@ -69,3 +69,52 @@
         right: 13%;
     }
 }
+@media (max-width: 767.98px) {
+    .sec_4 {
+        overflow: hidden;
+        padding: 40px 0 20px;
+
+        .sec_title {
+            margin-bottom: 30px;
+        }
+
+        .media {
+            padding: 10px 15px;
+            min-height: 80px;
+            margin-bottom: 15px;
+
+            .icon {
+                margin-right: 15px;
+            }
+        }
+        // abs pic
+        .circle {
+            top: 8%;
+            left: -20%;
+            width: 200px;
+        }
+
+        .circle_orange {
+            bottom: -13%;
+            right: 13%;
+            width: 400px;
+        }
+
+        .dubl_line.vertical {
+            right: -21%;
+            top: 18%;
+            width: 193px;
+        }
+
+        .dubl_line {
+            top: 60%;
+            right: -6%;
+            width: 200px;
+        }
+
+        .stone_orange {
+            top: -7%;
+            left: -13%;
+        }
+    }
+}
