--- a/sass/newland/_sec_8.scss
+++ b/sass/newland/_sec_8.scss
@@ -1,6 +1,5 @@
 .sec_8 {
     padding: 71px 0 10px;
-
     @media (min-width: 1200px) {
         .container {
             max-width: 1195px;
@@ -42,5 +41,58 @@
             margin-left: 0;
             margin-right: 9px;
         }
+    }
+    // abs pic
+    .dubl_line_vertical {
+        top: 3%;
+        left: 92%;
+    }
+
+    .circle {
+        top: 6%;
+        left: 7%;
+    }
+
+    .circle_orange {
+        top: 10%;
+        left: 77%;
+    }
+
+    .arrow {
+        top: 25%;
+        left: 87%;
+    }
+
+    .dubl_line {
+        opacity: 0.5;
+        top: 29%;
+        left: 1%;
+    }
+
+    .dubl_line_2 {
+        top: 60%;
+        left: 85%;
+    }
+
+    .dubl_line_down {
+        top: 81%;
+        left: 6%;
+        transform: rotateX(180deg) rotateY(180deg);
+    }
+
+    .dubl_line_down_2 {
+        top: 99%;
+        left: 88%;
+        transform: rotateX(180deg) rotateY(180deg);
+    }
+
+    .circle_orange_2 {
+        top: 44%;
+        left: 13%;
+    }
+
+    .circle_orange_3 {
+        top: 84%;
+        left: 75%;
     }
 }
