--- a/sass/newland/_common.scss
+++ b/sass/newland/_common.scss
@@ -248,6 +248,29 @@ h2 {
         color: #828282;
         margin-top: 38px;
     }
+    @media (max-width: 767.98px) {
+        position: relative;
+        text-align: left;
+        align-items: flex-start;
+        border-radius: 8px;
+        padding: 15px;
+
+        .icon {
+            position: absolute;
+            width: 90px;
+            min-width: 90px;
+            height: 90px;
+            border-width: 3px;
+        }
+
+        h3 {
+            height: 90px;
+            display: flex;
+            align-items: center;
+            margin-left: 120px;
+            max-width: 170px;
+        }
+    }
 }
 @media (max-width: 767.98px) {
     body {
