--- a/sass/newland/_sec_6.scss
+++ b/sass/newland/_sec_6.scss
@@ -18,9 +18,7 @@
         line-height: 130%;
         padding: 16px;
     }
-
     // abs img
-
     .circle {
         left: 10%;
         top: 87%;
@@ -34,5 +32,28 @@
     .dubl_stone_2 {
         left: 90%;
         top: 63%;
+    }
+}
+@media (max-width: 767.98px) {
+    .sec_6 {
+        padding: 15px 0 30px;
+
+        .card_profile {
+            margin-top: 15px;
+        }
+
+        p {
+            max-width: 100%;
+            min-height: 0;
+        }
+
+        .second_title {
+            margin: 15px 0 20px;
+        }
+
+        .btn {
+            padding: 14px 25px;
+            font-size: 16px;
+        }
     }
 }
