--- a/sass/newland/_sec_10.scss
+++ b/sass/newland/_sec_10.scss
@@ -148,3 +148,12 @@
         padding: 14px;
     }
 }
+@media (max-width: 767.98px) {
+    .sec_10 {
+        padding: 30px 0;
+
+        .sec_title {
+            margin-bottom: 30px;
+        }
+    }
+}
