--- a/sass/newland/_sec_7.scss
+++ b/sass/newland/_sec_7.scss
@@ -83,7 +83,8 @@
 }
 @media (max-width: 767.98px) {
     .sec_7 {
-        padding: 30px 0 30px;
+        padding: 30px 0;
+        overflow: hidden;
 
         .sec_title {
             margin-bottom: 30px;
@@ -124,6 +125,22 @@
         }
 
         .rocket {
+            display: none;
+        }
+        // abs pic
+        .circle {
+            width: 300px;
+            top: 74%;
+            left: 50%;
+        }
+
+        .circle_orange {
+            top: 22%;
+            left: -10%;
+            width: 80px;
+        }
+
+        .dubl_line {
             display: none;
         }
     }
