--- a/sass/newland/_sec_8.scss
+++ b/sass/newland/_sec_8.scss
@@ -34,7 +34,7 @@
         margin-left: 9px;
     }
 
-    .flex-row-reverse {
+    .flex-md-row-reverse {
         text-align: right;
 
         .text {
@@ -94,5 +94,40 @@
     .circle_orange_3 {
         top: 84%;
         left: 75%;
+    }
+}
+@media (max-width: 767.98px) {
+    .sec_8 {
+        padding: 30px 0 0;
+        overflow: hidden;
+
+        .flex-md-row-reverse {
+            text-align: left;
+        }
+
+        .sec_title {
+            margin-bottom: 40px;
+        }
+
+        .text {
+            margin-left: 0;
+        }
+
+        .screen_list {
+            .row {
+                margin-bottom: 40px;
+            }
+
+            h3 {
+                font-size: 20px;
+                margin-bottom: 15px;
+                margin-top: 20px;
+            }
+
+            p {
+                font-size: 14px;
+                margin-bottom: 20px;
+            }
+        }
     }
 }
